Cosmetic issue: Wrap the calendar event text

--- a/src/app/employee/leave-entitlement/leave-planning/calendar-view/calendar-view.component.scss
+++ b/src/app/employee/leave-entitlement/leave-planning/calendar-view/calendar-view.component.scss
@@ -109,6 +109,7 @@
   ::ng-deep .fc-content{
     color:white;
     cursor: default;
+    white-space: normal;
   }
   ::ng-deep .fc-content:hover{
     color:white;
